# zesu-zkvm

./: .gitignore  Makefile  README.md  build.zig  build.zig.zon  zisk.ld
.github/workflows/: ci.yml  release.yml
linea/: Makefile  README.md  build.zig  build.zig.zon  linea.ld
linea/src/: linea_host.zig  startup.S  zkvm_io.zig
linea/src/runtime/: stdlibs_accel.zig
openvm/: Makefile  README.md  build.zig  build.zig.zon  openvm.ld  openvm.toml
openvm/runner/: Cargo.toml
openvm/runner/src/: main.rs
openvm/src/: main.zig  openvm_host.zig  startup.S  zkvm_io.zig
openvm/src/runtime/: allocator.zig  blake2f.zig  bls12_381.zig  bn254.zig  main.zig  openvm_accel.zig  ripemd160.zig  secp256k1.zig  secp256r1.zig  stdlibs_accel.zig  zesu_allocator.zig
openvm/src/zkvm_accel/: blake2f.zig  bls12_381.zig  bn254.zig  modexp.zig  openvm_accel.zig  secp256k1.zig  secp256r1.zig
src/: deserialize.zig  main.zig
src/zisk/: accel_impl.zig  allocator.zig  bn254_pairing.zig  circuits.zig  main.zig  secp256k1.zig
vectors/: mainnet_24758573.expected.hex
zisk/: Makefile  README.md  build.zig  build.zig.zon  zisk.ld
zisk/src/: main.zig  zisk_host.zig  zkvm_io.zig
zisk/src/runtime/: accel_impl.zig  blake2f.zig  circuits.zig  eip196.zig  main.zig  ripemd160.zig  secp256k1.zig  secp256r1.zig  zesu_allocator.zig  zisk_accel_impl.zig
zisk/src/zkvm_accel/: allocator.zig  blake2f.zig  bn254_pairing.zig  circuits.zig  eip196.zig  secp256k1.zig  secp256r1.zig  zisk_accel.zig
