[package]
name = "zesu-openvm-runner"
version = "0.1.0"
edition = "2021"
description = "Host runner for the zesu-openvm zkVM guest"

[[bin]]
name = "zesu-openvm-runner"
path = "src/main.rs"

[dependencies]
openvm-sdk              = { path = "../../../openvm/crates/sdk" }
openvm-sdk-config       = { path = "../../../openvm/crates/sdk-config" }
openvm-algebra-circuit  = { path = "../../../openvm/extensions/algebra/circuit" }
openvm-ecc-circuit      = { path = "../../../openvm/extensions/ecc/circuit" }
openvm-pairing-circuit  = { path = "../../../openvm/extensions/pairing/circuit" }
eyre              = "0.6"
toml              = "0.8"
num-bigint        = "0.4"
num-traits        = "0.2"

